samples/_failures_safe/1761517777_29dbf3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a83500fb.c: In function ‘main’:
./samples/SAFE/__tmp_a83500fb.c:160:16: error: missing terminating " character
  160 |         printf("%-12s %-12s
      |                ^~~~~~~~~~~~
./samples/SAFE/__tmp_a83500fb.c:160:9: error: expected expression at end of input
  160 |         printf("%-12s %-12s
      |         ^~~~~~
./samples/SAFE/__tmp_a83500fb.c:160:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a83500fb.c:160:9: error: expected declaration or statement at end of input
